@@ -29,6 +29,7 @@
 #include "Timer.h"
 #include <wtf/CurrentTime.h>
 #include <wtf/Noncopyable.h>
+#include <wtf/PassOwnPtr.h>
 
 namespace WebCore {
 
@@ -36,7 +37,10 @@ class HTMLDocumentParser;
 
 class HTMLParserScheduler :  public Noncopyable {
 public:
-    HTMLParserScheduler(HTMLDocumentParser*);
+    static PassOwnPtr<HTMLParserScheduler> create(HTMLDocumentParser* parser)
+    {
+        return adoptPtr(new HTMLParserScheduler(parser));
+    }
     ~HTMLParserScheduler();
 
     struct PumpSession {
@@ -70,6 +74,8 @@ public:
     bool isScheduledForResume() const { return m_continueNextChunkTimer.isActive(); }
 
 private:
+    HTMLParserScheduler(HTMLDocumentParser*);
+
     void continueNextChunkTimerFired(Timer<HTMLParserScheduler>*);
 
     HTMLDocumentParser* m_parser;
